- Changed Account creator to generate more random emails
- One click generator now auto checks one click status
- Profiles now validated before entering raffle to prevent mistaken entries
- Fixed NakedCPH Account creation (Not for when you get IP banned :/)
- Added FootDistrict To Raffle Bot

2.0.30
- More reliable proxy testing
- More reliable proxy creation
- Raffle Bot - Working DSM and DSMNY 

2.0.31
- Fix for Raffle Bot where loading profiles would lead to a blank screen
- More improvements on all tables throughout the app
- Added Qty to Profile creator for when you want to create profiles but dont need to enter cards
- VootStore fixed and added back

2.0.32
- Fixed NakedCPH Raffle to handle second Captcha they added.
- Fixed Proxy Generation -1 ping bug

2.0.33
- Fixed DSMNY raffle entry bug
- Reduced Delivery Region validation requirements
- More fixes for tables all around the app

2.0.34
- Reduced Delivery Region validation requirements

2.0.35
- Raffle Bot - Extra reliability for ExtraButter
- Account Creator - Generates proper random emails when using catchall
- Proxy Generator - Fixed Linode Delete All (Always Check Your Proxies Have Been Deleted)

2.0.36
- Profile Converter - Bug fixes for a bunch of bots
- Raffle Bot - NakedCPH updated to support extra field they added
- Raffle Bot - FootDistrict updated to support new sizes they added

2.1.0
- Account Creator - JuiceStore Account Creator
- Ping Tester - More accurate ping value
- Browser Module - New browser module that supports proxies and autofill (BETA)
- Address Jigger - Smarter Jigger to provide even more results

2.1.1
- One Click Generator - Fixed login issue
- Browser - Added user agents
- One Click Generator - Fixed "Stop All" Button

2.1.2
- Bug Fixes

Linode API Token - 31eff8ddbe15c0883c486ca6cc2ea34a3525fd8f314a75cd28f197a197aba88e
DigitalOcean API Token - 1f4a3502f0ee8ba347e9ea5f2b0b110ed66ef4880f1ba175522cccd28ff1e19a

4242424242424242:Visa:03:2020:123