@@ -103,6 +103,8 @@ export const translations = [
 export const sites = {
   // cncpts: 'https://cncpts.com',
   // bdgastore: 'https://bdgastore.com',
+  // 'gmail - US': 'https://google.com',
+  // 'nike - US': 'http://google.com',
   JuiceStore: 'https://juicestore.com',
   '12amrun': 'https://www.12amrun.com',
   '18montrose': 'https://18montrose.com',
@@ -858,69 +860,69 @@ export const longToShortStates = {
 };
 
 export const ENDCountries = {
-  "United Kingdom": 1,
-  "United States": 6,
-  "Hong Kong SAR China": 7,
-  "France": 8,
-  "Germany": 9,
-  "Denmark": 10,
-  "South Korea": 11,
-  "Australia": 12,
-  "Russia": 13,
-  "Taiwan": 14,
-  "Singapore": 15,
-  "Canada": 16,
-  "Netherlands": 17,
-  "Japan": 18,
-  "Italy": 19,
-  "Sweden": 20,
-  "Belgium": 21,
-  "Argentina": 22,
-  "Austria": 23,
-  "Ireland": 24,
-  "Romania": 25,
-  "Spain": 26,
-  "Latvia": 27,
-  "Croatia": 28,
-  "Cyprus": 29,
-  "Hungary": 30,
-  "Portugal": 31,
-  "Estonia": 32,
-  "Luxembourg": 33,
-  "Slovakia": 34,
-  "Bulgaria": 35,
-  "Greece": 37,
-  "Poland": 38,
-  "Lithuania": 39,
-  "Slovenia": 40,
-  "Finland": 41,
-  "Malta": 42,
-  "Czech Republic": 43,
-  "Brazil": 44,
-  "Chile": 45,
-  "China": 46,
-  "Guernsey": 52,
-  "Iceland": 54,
-  "Jersey": 60,
-  "Liechtenstein": 61,
-  "Macau SAR China": 62,
-  "Malaysia": 63,
-  "Mexico": 64,
-  "Monaco": 65,
-  "New Zealand": 68,
-  "Norway": 70,
-  "Puerto Rico": 74,
-  "Saudi Arabia": 76,
-  "Thailand": 78,
-  "Azerbaijan": 79,
-  "Turkey": 80,
-  "Ukraine": 83,
-  "United Arab Emirates": 85,
-  "Switzerland": 97,
-  "Bahrain": 98,
-  "India": 99,
-  "Israel": 101,
-  "Kuwait": 102,
-  "Qatar": 103,
-  "South Africa": 104
-}
+  'United Kingdom': 1,
+  'United States': 6,
+  'Hong Kong SAR China': 7,
+  France: 8,
+  Germany: 9,
+  Denmark: 10,
+  'South Korea': 11,
+  Australia: 12,
+  Russia: 13,
+  Taiwan: 14,
+  Singapore: 15,
+  Canada: 16,
+  Netherlands: 17,
+  Japan: 18,
+  Italy: 19,
+  Sweden: 20,
+  Belgium: 21,
+  Argentina: 22,
+  Austria: 23,
+  Ireland: 24,
+  Romania: 25,
+  Spain: 26,
+  Latvia: 27,
+  Croatia: 28,
+  Cyprus: 29,
+  Hungary: 30,
+  Portugal: 31,
+  Estonia: 32,
+  Luxembourg: 33,
+  Slovakia: 34,
+  Bulgaria: 35,
+  Greece: 37,
+  Poland: 38,
+  Lithuania: 39,
+  Slovenia: 40,
+  Finland: 41,
+  Malta: 42,
+  'Czech Republic': 43,
+  Brazil: 44,
+  Chile: 45,
+  China: 46,
+  Guernsey: 52,
+  Iceland: 54,
+  Jersey: 60,
+  Liechtenstein: 61,
+  'Macau SAR China': 62,
+  Malaysia: 63,
+  Mexico: 64,
+  Monaco: 65,
+  'New Zealand': 68,
+  Norway: 70,
+  'Puerto Rico': 74,
+  'Saudi Arabia': 76,
+  Thailand: 78,
+  Azerbaijan: 79,
+  Turkey: 80,
+  Ukraine: 83,
+  'United Arab Emirates': 85,
+  Switzerland: 97,
+  Bahrain: 98,
+  India: 99,
+  Israel: 101,
+  Kuwait: 102,
+  Qatar: 103,
+  'South Africa': 104
+};
